Rooms: метод поиска публичных комнат
